syntax = "proto3";

package Protocol;

import "enum.proto";

message BaseData {
	int32 hp = 1; // 현재 체력
    int32 maxHp = 2; // 최대 체력
}

message TowerData {
    int32 towerId = 1; // 타워 식별 id
    int32 towerNumber = 2; // 타워 종류 구분하는 번호
    PosInfo towerPos = 3;
}

message MonsterData {
    int32 monsterId = 1; // 몬스터 식별 id
    int32 monsterNumber = 2; // 몬스터 종류 구분하는 번호
    int32 level = 3; // 레벨
    PosInfo monsterPos = 4;
}

// 변경 주의(클라 의존성)
message UserData {
  int32 id = 1; // 유저 식별 id
  string name = 2; // 닉네임
  // 필요한 추가 필드를 여기에 정의
}

// 변경 주의(클라 의존성)
message RoomData {
  int32 id = 1;                // 방 ID
  string ownerId = 2;          // 방 소유자 ID
  string name = 3;             // 방 이름
  int32 maxUserNum = 4;        // 최대 사용자 수
  RoomStateType state = 5;     // 방 상태
  repeated UserData users = 6; // 방에 참여하는 사용자 목록
}

message CharacterData {
	int32 characterId = 1;		// 캐릭터 식별 ID
	PosInfo characterPos = 2;
} 

message PosInfo
{
	float x = 1;
	float y = 2;
}

